# Assignment-2.2-Programming-Task-2

NumCompute-final (1)/NumCompute-final/: README.md  conftest.py  pyproject.toml  requirements.txt
NumCompute-final (1)/NumCompute-final/benchmarks/: run_benchmarks.py
NumCompute-final (1)/NumCompute-final/demo/: demo.py  quickstart.ipynb
NumCompute-final (1)/NumCompute-final/numcompute/: __init__.py  benchmarking.py  io.py  metrics.py  optim.py  pipeline.py  preprocessing.py  rank.py  sort_search.py  stats.py  utils.py
NumCompute-final (1)/NumCompute-final/numcompute_stream/: pyproject.toml  test_stream.py
NumCompute-final (1)/NumCompute-final/numcompute_stream/benchmark/: stream_bench.py
NumCompute-final (1)/NumCompute-final/numcompute_stream/demo/: stream_demo.ipynb
NumCompute-final (1)/NumCompute-final/numcompute_stream/numcompute_stream/: __init__.py  ensemble.py  metrics.py  pipeline.py  preprocessing.py  stats.py  stream.py  tree.py  visualise.py
NumCompute-final (1)/NumCompute-final/tests/: test_benchmarking.py  test_init.py  test_io.py  test_metrics.py  test_optim.py  test_pipeline.py  test_preprocessing.py  test_rank.py  test_sort_rank.py  test_sort_search.py  test_stats.py  test_utils.py
