[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "numcompute-stream"
version = "0.1.0"
description = "Streaming decision tree framework extending NumCompute"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "matplotlib"]

[project.optional-dependencies]
dev = ["pytest", "jupyter"]

[tool.setuptools.packages.find]
include = ["numcompute_stream*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
